[tool.poetry]
name = "python-prometheus-export"
version = "0.1.0"
description = ""
authors = ["marieuig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
